agrege columnas y se que habra la ventana resevas